tests/neg/experimentalExperimental.scala
class MyExperimentalAnnot extends scala.annotation.experimental // error
